Provoke non-biased locking by calling System.identityHashCode()